--- a/index.html
+++ b/index.html
@@ -8,22 +8,31 @@
 </head>
 
 <body>
-    <h1>Hello World, we are software developers! </h1>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <header id="header">
+        <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo">
+        <nav id="nav-bar">
+            <div class="nav-link">
+                <a href="#Features">Features</a>
+                <a href="#How It Works">How It Works</a>
+                <a href="#Pricing">Pricing</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="title">
+            <h2>Handcrafted, home-made masterpieces</h2>
+        </div>
+        <div class="email">
+            <input type="email" id="email" name="email" placeholder="Enter your email address">
+        </div>
+        <div class="button">
+            <button>GET STARTED</button>
+        </div>
+    </main>
+    <script src=" https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js "></script>
 
-    <!--
 
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    <script src="js/index.js"></script>
+    <script src="js/index.js "></script>
 </body>
 
 </html>
